--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
+    "moment": "^2.20.1",
+    "rxjs": "^5.5.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
