--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.14"
