--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
+    "@angular/animations": "^5.1.3",
+    "@angular/cdk": "^5.0.3",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.12",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.3",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "lodash": "^4.17.4",
     "moment": "^2.20.1",
     "rxjs": "^5.5.6",
